fixed benefits text align, fixed meet luna background color, features title centering, added redirection to links, social links and logo, fixed footer margins, added button "up" in the footer, added margin between inputs

--- a/src/styles/blocks/_benefits.scss
+++ b/src/styles/blocks/_benefits.scss
@@ -1,6 +1,10 @@
 .benefits {
   &__container {
     @include container;
+
+    @include onTablet {
+      padding: 0 30px;
+    }
   }
 
   &__content {
@@ -26,6 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 
     @include onTablet {
       max-width: 350px;
@@ -43,11 +48,9 @@
     min-height: 60px;
     margin-bottom: 40px;
     @include desktopH4;
-    text-align: center;
   }
 
   &__text {
     @include secondary-text;
-    text-align: justify;
   }
 }
