--- a/src/styles/blocks/_contact.scss
+++ b/src/styles/blocks/_contact.scss
@@ -2,6 +2,10 @@
   &__container {
     @include container;
 
+    @include onTablet {
+      padding: 0 60px;
+    }
+
     @include onMobile {
       padding: 0 30px;
     }
@@ -28,6 +32,10 @@
 
     @include onTablet {
       @include tabletH2;
+    }
+
+    @include onMobile {
+      margin-bottom: 30px;
     }
   }
 
