--- a/src/styles/blocks/_features.scss
+++ b/src/styles/blocks/_features.scss
@@ -4,6 +4,7 @@
     margin-bottom: 170px;
 
     @include onTablet {
+      padding: 0 60px;
       margin-bottom: 140px;
     }
 
@@ -14,7 +15,6 @@
 
   &__title {
     @include desktopH2;
-    text-align: center;
     margin-bottom: 30px;
 
     @include onTablet {
@@ -52,6 +52,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px 130px;
+
+    @include onTablet {
+      gap: 50px;
+    }
 
     @include onMobile {
       display: flex;
