--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,5 +1,9 @@
 .footer {
-  padding-bottom: 30px;
+  max-width: 1230px;
+  padding: 0 15px 30px;
+
+  position: relative;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,8 +13,30 @@
     padding: 0 30px;
   }
 
+  &__arrow-up {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    height: 25px;
+    width: 25px;
+
+    color: $color-dark-charcoal;
+    text-decoration: none;
+    transition: transform $transition-duration;
+
+    @include onMobile {
+      display: block;
+    }
+
+    &:hover {
+      color: $color-scobeloff;
+      transform: scale(1.2);
+    }
+  }
+
   &__logo {
-    margin-bottom: 30px;
+    margin-bottom: 60px;
 
     @include onMobile {
       display: none;
@@ -21,7 +47,11 @@
     width: 160px;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
+
+    @include onMobile {
+      margin-bottom: 30px;
+    }
   }
 
   &__social {
