--- a/src/styles/blocks/_technology.scss
+++ b/src/styles/blocks/_technology.scss
@@ -1,6 +1,7 @@
 .technology {
   &__container {
     @include container;
+    margin-bottom: 170px;
 
     @include onTablet {
       margin-bottom: 140px;
